--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # JSON web token (JWT) secret: this keeps our app's user authentication secure
 # This secret should be a random 20-ish character string
-JWT_SECRET ='p4sta.w1th-b0logn3s3-s@uce'
+JWT_SECRET ='sdfsdfsd.3423423s-sdfsdfs-s@sdfsdfsdfsds23423'
 
 # Mongo DB
 # Local development
