--- a/package.json
+++ b/package.json
@@ -1,41 +1,62 @@
 {
-  "name": "node-express-typescript-boilerplate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "watch": "tsc -w",
-    "dev": "nodemon dist/app.js",
-    "start": "node dist/app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.8",
-    "@types/express-jwt": "0.0.42",
-    "@types/mongoose": "^5.7.36",
-    "@types/node": "^14.6.2",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/ramda": "^0.27.14",
-    "nodemon": "^2.0.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
-  },
-  "dependencies": {
-    "argon2": "^0.27.0",
-    "body-parser": "^1.19.0",
-    "celebrate": "^12.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.2",
-    "ramda": "^0.27.1",
-    "reflect-metadata": "^0.1.13",
-    "typedi": "^0.8.0",
-    "winston": "^3.3.3"
-  }
+    "name": "node-express-typescript-boilerplate",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "watch": "tsc -w",
+        "dev": "nodemon dist/app.js",
+        "start": "node dist/app.js",
+        "lint": "eslint --fix . --ext ts --ignore-path ./.gitignore",
+        "format": "prettier --write './**/*.{js,ts,css,md,json}' --config ./.prettierrc"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{ts}": "eslint --cache --fix"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/cors": "^2.8.7",
+        "@types/express": "^4.17.8",
+        "@types/express-jwt": "0.0.42",
+        "@types/jsonwebtoken": "^8.5.0",
+        "@types/mongoose": "^5.7.36",
+        "@types/node": "^14.6.2",
+        "@types/ramda": "^0.27.14",
+        "@typescript-eslint/eslint-plugin": "^4.4.0",
+        "@typescript-eslint/parser": "^4.4.0",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-config-prettier": "^6.12.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-simple-import-sort": "^5.0.3",
+        "husky": "^4.3.0",
+        "lint-staged": "^10.4.0",
+        "nodemon": "^2.0.4",
+        "prettier": "^2.1.2",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.2"
+    },
+    "dependencies": {
+        "argon2": "^0.27.0",
+        "body-parser": "^1.19.0",
+        "celebrate": "^12.2.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-jwt": "^6.0.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.10.2",
+        "ramda": "^0.27.1",
+        "reflect-metadata": "^0.1.13",
+        "typedi": "^0.8.0",
+        "winston": "^3.3.3"
+    }
 }
