--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "watch": "tsc -w",
         "dev": "nodemon dist/app.js",
         "start": "node dist/app.js",
-        "lint": "eslint --fix . --ext ts --ignore-path ./.gitignore",
-        "format": "prettier --write './**/*.{js,ts,css,md,json}' --config ./.prettierrc"
+        "lint": "eslint --fix . --ext ts --ignore-path ./.gitignore --max-warnings=0",
+        "format": "prettier --write './**/*.{ts,css,md,json}' --config ./.prettierrc"
     },
     "husky": {
         "hooks": {
