updated lint-staged script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         }
     },
     "lint-staged": {
-        "*.{ts}": "eslint --cache --fix"
+        "src/**/*.{ts}": "eslint --cache --fix"
     },
     "keywords": [],
     "author": "",
