--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,14 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "resolveJsonModule": true,
-        "baseUrl": "."
+        "baseUrl": ".",
+        "paths": {
+            "*": ["src/types/*"]
+          },
+        "typeRoots": [
+            "./node_modules/@types",
+            "src/*"
+          ],
     },
     "exclude": ["node_modules"],
     "include": ["./src/**/*.tsx", "./src/**/*.ts"]
